Task-58612: [Accessibility - Contrast C3.2 - Stream Page] Fix contrast problem for all "little" texts

--- a/application/src/main/webapp/css/components/chatContact.less
+++ b/application/src/main/webapp/css/components/chatContact.less
@@ -14,7 +14,7 @@
     margin-right: 10px ~'; /** orientation=rt */ ';
   }
   .externalTagClass {
-    color: #999999;
+    color: #767676;
     margin-left: 5px ~'; /** orientation=lt */ ';
     margin-right: 5px ~'; /** orientation=rt */ ';
     font-weight: normal;
