--- a/application/src/main/webapp/css/components/chatDrawer.less
+++ b/application/src/main/webapp/css/components/chatDrawer.less
@@ -75,7 +75,7 @@
           }
         }
        .externalTagClass {
-         color: #999999;
+         color: #767676;
          margin-left: 5px ~'; /** orientation=lt */ ';
          margin-right: 5px ~'; /** orientation=rt */ ';
          font-weight: normal;
